Added new api to destination

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_NASA_API_KEY=vOPYjRd6HWy5cMKddFgrrHcueO0tbEL1wd4lpuB8
+NEXT_PUBLIC_RAPID_API_KEY=cb8388266emshe8513fd79309a17p1d2725jsn15f7c8d32677
